<resources>
    <string name="app_name">摩看 DEMO</string>
    <string name="about">关于</string>
    <string name="live">直播</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_update_camera">设置</string>
    <string name="filter_hint">输入序列号或名称进行搜索</string>
    <string name="gallery">相册</string>
    <string name="vod">回放</string>
    <string name="save_photo">保存图片</string>
    <string name="share_photo">分享图片</string>
    <string name="filter_photo">筛选</string>
    <string name="hint_start_date">开始日期</string>
    <string name="hint_end_date">结束日期</string>
    <string name="submit">提交</string>
    <string name="clean">清空</string>
</resources>
