<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/md_grey_100"
              android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/op"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/signal_one"/>

                <ImageView
                    android:id="@+id/signal_one"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="4dp"
                    android:layout_toLeftOf="@+id/signal_two"/>

                <ImageView
                    android:id="@+id/signal_two"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="4dp"
                    android:layout_toLeftOf="@+id/battery"/>

                <ImageView
                    android:id="@+id/battery"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="4dp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@color/white_clr"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/text_clr"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/snapshot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"/>

                <View
                    android:id="@+id/click_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:id="@+id/more_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/item_bg_color"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:maxWidth="160dp"
                        android:paddingBottom="18dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="8dp"
                        android:text="很抱歉，该设备已被占用请耐心等待！"
                        android:textColor="@color/blue_clr"
                        android:visibility="gone"/>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp">

                        <Button
                            android:id="@+id/play_button"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_btn_click_bg"
                            android:text="@string/live"
                            android:textColor="@color/md_white_1000"
                            android:textSize="@dimen/subhead"/>

                        <Button
                            android:id="@+id/vod_button"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_btn_click_bg"
                            android:text="@string/vod"
                            android:textColor="@color/md_white_1000"
                            android:textSize="@dimen/subhead"/>

                        <Button
                            android:id="@+id/gallery_button"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_btn_click_bg"
                            android:text="@string/gallery"
                            android:textColor="@color/md_white_1000"
                            android:textSize="@dimen/subhead"/>
                    </TableRow>
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>